--- a/src/theme/bootstrap/member/header.html
+++ b/src/theme/bootstrap/member/header.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-CN">
 
 <head>
     <meta charset="utf-8"/>
@@ -14,12 +14,40 @@
     <meta name="description" content="{$site_description}"/>
     <title>{$site_title}</title>
     <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="/theme/default/css/style.css" type="text/css"/>
+    <link rel="stylesheet" href="/theme/bootstrap/css/style.css" type="text/css"/>
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" mce_href="/favicon.ico">
+
     {function.doHookAction('view_head')}
+
 </head>
 
 <body>
+    <div class="header">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 col-xs-5">
+                    <a class="logo" href="{$site_url}" title="{$site_name}">{$site_name}</a>
+                </div>
+                <div class="col-md-4 col-xs-7">
+                    <div class="slogan">{$site_slogan}</div>
+                    <div class="searchform">
+                        <form method="get" action="/">
+                            <input type="hidden" value="index" name="c" />
+                            <input type="hidden" value="search" name="a" />
+                            <!-- <input type="hidden" value="1" name="catid" />-->
+                            <div class="input-group keywords-input">
+                                <input type="text" value="" name="kw" class="form-control" />
+                                <div class="input-group-btn">
+                                    <button type="submit" class="btn btn-default keywords-submit">搜索</button>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
     <div class="container">
         <nav class="navbar navbar-default">
             <div class="container-fluid">
@@ -27,32 +55,29 @@
                     <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar">
                         <span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="{function.url('member/index')}">个人中心</a>
+                    <a class="navbar-brand" href="{$site_url}">首页</a>
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li class="hidden-sm"><a href="{$site_url}">首页</a></li>
-                        {nav num=6}<li{if $current} class="active"{/if}><a href="{$vdata['url']}">{$vdata['catname']}</a></li>{/nav}
+                        <li class="active"><a href="{function.url('member/index')}">个人中心</a></li>
                     </ul>
-                    <ul class="nav navbar-nav navbar-right">
-                    {if $member}
+                    <ul class="nav navbar-nav navbar-right">{if $member}
                         <li class="account dropdown">
-                            <a href="javascript:void(0);" data-toggle="dropdown">您好 {$member['username']}&nbsp;<span class="caret"></span></a>
+                            <a href="javascript:void(0);" data-toggle="dropdown">您好,{$member['username']}&nbsp;<span class="caret"></span></a>
                             <ul class="dropdown-menu">
                                 <li><a href="{function.url('member/index')}">个人中心</a></li>
+                                <li><a href="{function.url('member/index/edit')}">修改资料</a></li>
                                 <li><a href="{function.url('member/index/password')}">修改密码</a></li>
                                 <li role="separator" class="divider"></li>
                                 <li><a href="{function.url('member/login/out')}">退出</a></li>
                                 <li role="separator" class="divider"></li>
                             </ul>
-                        </li>
-                    {else}
+                        </li>{else}
                         <li><a href="{function.url('member/login')}">登录</a></li>
-                        <li><a href="{function.url('member/register')}">注册</a></li>
-                    {/if}
-                        <li><a href="https://github.com/doufox/doufox/" target="_blank">源码</a></li>
+                        <li><a href="{function.url('member/register')}">注册</a></li>{/if}
+
                     </ul>
                 </div>
             </div>
         </nav>
-
+    </div>
