--- a/src/theme/bootstrap/footer.html
+++ b/src/theme/bootstrap/footer.html
@@ -4,19 +4,23 @@
         <div class="row">
             <div class="col-md-6 col-sm-6">
                 <p class="text-muted">
-                    <span>&copy;&nbsp;CopyRight {function.date('Y')}&nbsp;{function.ucfirst(APP_NAME)} All Rights Reserved.</span>
+                    <span>&copy; CopyRight {function.date('Y')}&nbsp;{php echo APP_NAME} All Rights Reserved.</span>
                     <span>={$app_execution_time}=</span>
                 </p>
             </div>
             <div class="col-md-6 col-sm-6">
                 <p class="pull-right">
-                    <span><a href="http://www.beian.miit.gov.cn" target="_blank">沪ICP备20016252号</a></span>
-                    <span>Powered by <a href="https://crogram.com/">Crogram</a></span>
+                    {if $icp_filing_number}<span><a href="https://beian.miit.gov.cn/#/Integrated/index" target="_blank">{$icp_filing_number}</a></span>{/if}
+
+                    <span>Powered by <a href="{php echo APP_SITE}">{php echo APP_NAME}</a></span>
                 </p>
             </div>
         </div>
     </div>
 </footer>
+
+<script src="static/js/jquery.min.js"></script>
+<script src="static/bootstrap/js/bootstrap.min.js"></script>
 
 {function.doHookAction('view_footer')}
 
