--- a/src/theme/bootstrap/member/content_add.html
+++ b/src/theme/bootstrap/member/content_add.html
@@ -1,45 +1,47 @@
 {template member/header.html}
 
-<script type="text/javascript" src="/static/js/jquery.min.js"></script>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-3 col-md-3 col-xs-4">
+            {template member/sidebar.html}
+        </div>
+        <div class="col-sm-9 col-md-9 col-xs-8">
+            <form action="" method="post">
+                {if $data}
+                <input type="hidden" value="{$data[catid]}" name="data[catid]">{/if}
+                <table class="table table-bordered">
+                    <tbody>
+                        <tr>
+                            <th width="80">
+                                <font color="red">*</font>&nbsp;栏目：</th>
+                            <td>
+                                <select class="form-control" name="data[catid]">{$category}</select>
+                            </td>
+                        </tr>
+                        {if $model['content']['title']['show']}
+                        <tr>
+                            <th>
+                                <font color="red">*</font>&nbsp;{$model['content']['title']['name']}：</th>
+                            <td>
+                                <input type="text" class="form-control" size="50" id="title" value="{$data['title']}" name="data[title]" onBlur="ajaxtitle()">
+                                <div class="show-tips" id="title_text"></div>
+                            </td>
+                        </tr>
+                        {/if} {$data_fields}
+                        <tr>
+                            <th>&nbsp;</th>
+                            <td>
+                                <button type="submit" name="submit" class="btn btn-default">提交</button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </form>
+        </div>
+    </div>
+</div>
+
 <script type="text/javascript" src="/static/js/dialog.js?skin=green"></script>
 <script type="text/javascript" src="/static/js/admin.js"></script>
 
-<div class="row">
-    <div class="col-sm-3 col-md-3 col-xs-4">
-        {template member/sidebar.html}
-    </div>
-    <div class="col-sm-9 col-md-9 col-xs-8">
-        <form action="" method="post">
-            {if $data}
-            <input type="hidden" value="{$data[catid]}" name="data[catid]">{/if}
-            <table class="table table-bordered">
-                <tbody>
-                    <tr>
-                        <th width="80">
-                            <font color="red">*</font>&nbsp;栏目：</th>
-                        <td>
-                            <select class="form-control" name="data[catid]">{$category}</select>
-                        </td>
-                    </tr>
-                    {if $model['content']['title']['show']}
-                    <tr>
-                        <th>
-                            <font color="red">*</font>&nbsp;{$model['content']['title']['name']}：</th>
-                        <td>
-                            <input type="text" class="form-control" size="50" id="title" value="{$data['title']}" name="data[title]" onBlur="ajaxtitle()">
-                            <div class="show-tips" id="title_text"></div>
-                        </td>
-                    </tr>
-                    {/if} {$data_fields}
-                    <tr>
-                        <th>&nbsp;</th>
-                        <td>
-                            <button type="submit" name="submit" class="btn btn-default">提交</button>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </form>
-    </div>
-</div>
 {template footer.html}
