--- a/src/theme/bootstrap/member/login.html
+++ b/src/theme/bootstrap/member/login.html
@@ -34,40 +34,42 @@
     }
 </script>
 
-<form class="form form-horizontal" method="post" action="">
-    <input type="hidden" value="{$backurl}" name="data[back]" />
-    <div class="form-group form-inline">
-        <label class="col-sm-2 control-label" for="inputUsername"><font color="red">*</font>登录会员：</label>
-        <div class="col-sm-10">
-            <input class="form-control" type="text" name="data[username]" id="inputUsername" placeholder="登陆账号" onblur="usernameBlur()" />
-            <span id="username_prompt" class="tips_info"></span>
+<div class="container">
+    <form class="form form-horizontal" method="post" action="">
+        <input type="hidden" value="{$backurl}" name="data[back]" />
+        <div class="form-group form-inline">
+            <label class="col-sm-2 control-label" for="inputUsername"><font color="red">*</font>登录会员：</label>
+            <div class="col-sm-10">
+                <input class="form-control" type="text" name="data[username]" id="inputUsername" placeholder="登陆账号" onblur="usernameBlur()" />
+                <span id="username_prompt" class="tips_info"></span>
+            </div>
         </div>
-    </div>
-    <div class="form-group form-inline">
-        <label class="col-sm-2 control-label" for="inputPwd"><font color="red">*</font>密码：</label>
-        <div class="col-sm-10">
-            <input class="form-control" type="password" name="data[password]" id="inputPwd" placeholder="账号密码" onblur="pwdBlur()" />
-            <span id="pwd_prompt" class="tips_info"></span>
+        <div class="form-group form-inline">
+            <label class="col-sm-2 control-label" for="inputPwd"><font color="red">*</font>密码：</label>
+            <div class="col-sm-10">
+                <input class="form-control" type="password" name="data[password]" id="inputPwd" placeholder="账号密码" onblur="pwdBlur()" />
+                <span id="pwd_prompt" class="tips_info"></span>
+            </div>
         </div>
-    </div>
-{if $config['MEMBER_LOGINCODE']}
-    <div class="form-group form-inline">
-        <label class="col-sm-2 control-label" for="inputCode"><font color="red">*</font>验证码：</label>
-        <div class="col-sm-10">
-            <input type="text" class="form-control" name="code" id="inputCode" style="width:100px" placeholder="验证码" autocomplete="off" />
-            <img id="code" title="看不清楚？换一张" align="absmiddle" onclick="reload_code();" src="{function.url('api/access/checkcode', array('width'=>80, 'height'=>28))}"  style="cursor:pointer; margin-top:-3px;" />
+
+        {if $member_logincode}<div class="form-group form-inline">
+            <label class="col-sm-2 control-label" for="inputCode"><font color="red">*</font>验证码：</label>
+            <div class="col-sm-10">
+                <input type="text" class="form-control" name="code" id="inputCode" style="width:100px" placeholder="验证码" autocomplete="off" />
+                <img id="code" title="看不清楚？换一张" align="absmiddle" onclick="reload_code();" src="{function.url('api/access/checkcode', array('width'=>80, 'height'=>28))}"  style="cursor:pointer; margin-top:-3px;" />
+            </div>
+        </div>{/if}
+
+        <div class="form-group form-inline">
+            <div class="col-sm-2 control-label"></div>
+            <div class="col-sm-10">
+                <button type="submit" name="submit" class="btn btn-default">登录</button>
+                <span style="padding-left:20px">
+                    <a href="#" onclick="return false">忘记密码？</a>
+                </span>
+            </div>
         </div>
-    </div>
-{/if}
-    <div class="form-group form-inline">
-        <div class="col-sm-2 control-label"></div>
-        <div class="col-sm-10">
-            <button type="submit" name="submit" class="btn btn-default">登录</button>
-            <span style="padding-left:20px">
-                <a href="#" onclick="return false">忘记密码？</a>
-            </span>
-        </div>
-    </div>
-</form>
+    </form>
+</div>
 
 {template footer.html}
