--- a/src/theme/bootstrap/member/password.html
+++ b/src/theme/bootstrap/member/password.html
@@ -1,38 +1,37 @@
 {template member/header.html}
 
-<div class="row">
-    <div class="col-sm-3 col-md-2 col-xs-4">
-        {template member/sidebar.html}
-    </div>
-    <div class="col-sm-9 col-md-10 col-xs-8">
-        <form class="form" action="" method="post">
-            <table class="table table-bordered">
-                <tbody>
-                    <tr>
-                        <th colspan="2" class="text-center">修改密码（当前账号：{$member['username']}）</th>
-                    </tr>
-                    <tr>
-                        <th width="100">当前密码：</th>
-                        <td><input name="data[password1]" type="password" class="form-control" value="" /></td>
-                    </tr>
-                    <tr>
-                        <th>新的密码：</th>
-                        <td><input name="data[password2]" type="password" class="form-control" value="" /></td>
-                    </tr>
-                    <tr>
-                        <th>确认密码：</th>
-                        <td><input name="data[password3]" type="password" class="form-control" value="" /></td>
-                    </tr>
-                    <tr>
-                        <tr>
-                            <th>&nbsp;</th>
-                            <td>
-                                <button type="submit" class="btn btn-default" name="submit">保存</button>
-                            </td>
-                        </tr>
-                </tbody>
-            </table>
-        </form>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-4 col-md-3 col-xs-12">
+            {template member/sidebar.html}
+        </div>
+        <div class="col-sm-8 col-md-4 col-xs-12">
+            <form class="form" action="" method="post">
+                <div class="panel panel-default">
+                    <div class="panel-heading"><span class="panel-title">修改密码</span></div>
+                    <table class="table table-bordered">
+                        <tbody>
+                            <tr>
+                                <th width="100">当前密码</th>
+                                <td><input name="data[password1]" type="password" class="form-control input-sm" value="" /></td>
+                            </tr>
+                            <tr>
+                                <th>新的密码</th>
+                                <td><input name="data[password2]" type="password" class="form-control input-sm" value="" /></td>
+                            </tr>
+                            <tr>
+                                <th>确认密码</th>
+                                <td><input name="data[password3]" type="password" class="form-control input-sm" value="" /></td>
+                            </tr>
+                            <tr>
+                        </tbody>
+                    </table>
+                    <div class="panel-footer">
+                        <button type="submit" class="btn btn-primary" name="submit">保存</button>
+                    </div>
+                </div>
+            </form>
+        </div>
     </div>
 </div>
 
